objects/Associate__c.object
<CustomObject>
    <description>All associates used for Course Bookings</description>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associate and other Costs (Approved By)</relationshipLabel>
        <relationshipName>R00N20000001SbyYEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate_Cost__c</fullName>
        <description>The number of associate days against the associate cost per day (SF field: “day rate”) excluding expenses where cost type = “Associate Consultant” OR “volunteer”</description>
        <formula>IF(OR(TEXT( Associate_Type__c )=&apos;Associate Consultant&apos;,TEXT( Associate_Type__c )=&apos;Volunteer&apos;) , Value__c  , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of associate days against the associate cost per day (SF field: “day rate”) excluding expenses where cost type = “Associate Consultant” OR “volunteer”</inlineHelpText>
        <label>Associate Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associate_Notes__c</fullName>
        <label>Associate Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Associate_Status__c</fullName>
        <description>This is a mandatory field when you book costs which are not related to associates.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associate_Type__c</fullName>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actor</fullName>
                </value>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Airfare &amp; Train</fullName>
                </value>
                <value>
                    <fullName>Associate Consultant</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Development Team</fullName>
                </value>
                <value>
                    <fullName>External Partner</fullName>
                </value>
                <value>
                    <fullName>Hotels</fullName>
                </value>
                <value>
                    <fullName>LBU</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Consumption</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Venue Cost</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Cross-Border Delivery</fullName>
                </value>
                <value>
                    <fullName>Localisation</fullName>
                </value>
                <value>
                    <fullName>Multimedia Costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate name lookup to contact</description>
        <label>Associate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associate and other Costs (Associate)</relationshipLabel>
        <relationshipName>Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloneSourceId__c</fullName>
        <description>Backend field to help identify a cloned record. It saves the Id of the original record that was cloned.</description>
        <label>CloneSourceId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to course which associate works on</description>
        <label>Course</label>
        <referenceTo>Courses__c</referenceTo>
        <relationshipLabel>Associates</relationshipLabel>
        <relationshipName>Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced_Received__c</fullName>
        <description>Date associate invoice received</description>
        <inlineHelpText>This field should contain the date the Project related expense was incurred.</inlineHelpText>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Rate__c</fullName>
        <description>Associate day rate</description>
        <inlineHelpText>Please enter the Associate day rate, if relevant. SHL-incurred expenses (e.g. Airfares) should be entered in the Expenses field.</inlineHelpText>
        <label>Day Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Worked__c</fullName>
        <description>Number of days associate worked on course</description>
        <inlineHelpText>Please enter the number of days worked by the associate/volunteer, if relevant. SHL-incurred expenses (e.g. Airfares) should be entered in the Expenses field.</inlineHelpText>
        <label>Days Worked</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_BU__c</fullName>
        <label>Delivery BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD1</fullName>
                </value>
                <value>
                    <fullName>AU1</fullName>
                </value>
                <value>
                    <fullName>BE5</fullName>
                </value>
                <value>
                    <fullName>CA1</fullName>
                </value>
                <value>
                    <fullName>CH1</fullName>
                </value>
                <value>
                    <fullName>CN1</fullName>
                </value>
                <value>
                    <fullName>DE5</fullName>
                </value>
                <value>
                    <fullName>DK1</fullName>
                </value>
                <value>
                    <fullName>FI1</fullName>
                </value>
                <value>
                    <fullName>FR5</fullName>
                </value>
                <value>
                    <fullName>HK1</fullName>
                </value>
                <value>
                    <fullName>IN1</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>ME1</fullName>
                </value>
                <value>
                    <fullName>NL5</fullName>
                </value>
                <value>
                    <fullName>NO1</fullName>
                </value>
                <value>
                    <fullName>NZ1</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>SA5</fullName>
                </value>
                <value>
                    <fullName>SE1</fullName>
                </value>
                <value>
                    <fullName>SG1</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>US5</fullName>
                </value>
                <value>
                    <fullName>ZA1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <description>Total expenses for associate</description>
        <inlineHelpText>This amount should exclude tax.</inlineHelpText>
        <label>Expenses</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <inlineHelpText>Course end date month</inlineHelpText>
        <label>Invoice Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBU_Cost__c</fullName>
        <description>The number of associate days against the associate cost per day (SF field: “day rate”) excluding expenses where cost type = “LBU”</description>
        <formula>IF( TEXT( Associate_Type__c )=&apos;LBU&apos; ,  Value__c,0)</formula>
        <inlineHelpText>The number of associate days against the associate cost per day (SF field: “day rate”) excluding expenses where cost type = “LBU”</inlineHelpText>
        <label>LBU Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Cost__c</fullName>
        <description>To calculate Costs where Cost Type not LBU, Associate Consultant</description>
        <formula>IF( NOT(OR(TEXT( Associate_Type__c )=&apos;LBU&apos; ,
 TEXT( Associate_Type__c )=&apos;Associate Consultant&apos;)),
 Value__c,0)</formula>
        <inlineHelpText>To calculate Costs where Cost Type not LBU, Associate Consultant</inlineHelpText>
        <label>Other Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Associate and other Costs</relationshipLabel>
        <relationshipName>Associates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Requirement to use specific Associates</fullName>
                </value>
                <value>
                    <fullName>Internal Capacity</fullName>
                </value>
                <value>
                    <fullName>Location (in person)</fullName>
                </value>
                <value>
                    <fullName>Language Requirement</fullName>
                </value>
                <value>
                    <fullName>Seniority Needed</fullName>
                </value>
                <value>
                    <fullName>Missing PS Skills</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rechargeable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this associate or other cost rechargeable to the client?</inlineHelpText>
        <label>Rechargeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <description>Sum of Associate Costs, LBU Costs and Expenses</description>
        <formula>Value__c  +  Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Associate Costs, LBU Costs and Expenses</inlineHelpText>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <formula>Value__c +  Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>Day_Rate__c  * Days_Worked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This amount should exclude tax</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Associate and other Cost</label>
    <listViews>
        <fullName>Europe_Assoc_POs_Specific_Assoc</fullName>
        <columns>Associate__c</columns>
        <columns>Date_Invoiced_Received__c</columns>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Associate_Cost__c</columns>
        <columns>Delivery_BU__c</columns>
        <columns>Days_Worked__c</columns>
        <columns>Approved_By__c</columns>
        <columns>Associate_Notes__c</columns>
        <columns>Expenses__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_BU__c</field>
            <operation>equals</operation>
            <value>BE5,CH1,DE5,DK1,FI1,FR5,IT1,NL5,NO1,SE1,UK1</value>
        </filters>
        <filters>
            <field>Date_Invoiced_Received__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Associate_Type__c</field>
            <operation>equals</operation>
            <value>Associate Consultant,External Partner</value>
        </filters>
        <filters>
            <field>Associate_Status__c</field>
            <operation>equals</operation>
            <value>Provisional,Confirmed</value>
        </filters>
        <filters>
            <field>Associate__c</field>
            <operation>contains</operation>
            <value>Maaike</value>
        </filters>
        <label>Europe Assoc POs - Specific Assoc</label>
    </listViews>
    <listViews>
        <fullName>PO_Status</fullName>
        <columns>NAME</columns>
        <columns>Date_Invoiced_Received__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Associate__c</columns>
        <columns>Associate_Notes__c</columns>
        <columns>Associate_Status__c</columns>
        <columns>Courses__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>,sally treloar,aimee murray,tilden lamb,lauren hickford,shola stoute</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2009 12:00 AM</value>
        </filters>
        <label>PO Status this year</label>
    </listViews>
    <nameField>
        <displayFormat>T{00000}</displayFormat>
        <label>T Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associate and other Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AssociateNameValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Associate_Type__c ,&apos;Associate Consultant&apos;),ISPICKVAL(Associate_Type__c ,&apos;Volunteer&apos;), ISPICKVAL(Associate_Type__c ,&apos;External Partner&apos;) ) , LEN(Associate__c )=0)</errorConditionFormula>
        <errorDisplayField>Associate__c</errorDisplayField>
        <errorMessage>Please select the Associate Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Associate_Notes_field_mandatory</fullName>
        <active>true</active>
        <description>The &apos;Associate Notes&apos; field needs to be mandatory if the &apos;cost type&apos; is set up to &apos;other&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL( Associate_Type__c ,&apos;Other&apos;) , ISBLANK( Associate_Notes__c ) )</errorConditionFormula>
        <errorMessage>The &apos;Associate Notes&apos; field needs to be mandatory as the &apos;cost type&apos; is set up to &apos;other&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Associate_Notes_mandatory_reason_other</fullName>
        <active>true</active>
        <description>The &apos;Associate Notes&apos; field needs to be mandatory as the reason is set up to &apos;other&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL( Reason__c,&apos;Other&apos; ) , ISBLANK( Associate_Notes__c ))</errorConditionFormula>
        <errorMessage>The &apos;Associate Notes&apos; field needs to be mandatory as the reason is set up to &apos;other&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseOrProjectRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Courses__c =&quot;&quot; , Project__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>Course or Project must be completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateInvoicedMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Project__c &lt;&gt;&quot;&quot; || Project__c &lt;&gt;&quot;a0920000002roAP&quot;,   NOT( ISPICKVAL(Associate_Type__c,&quot;Development Team&quot;) ),ISNULL(Date_Invoiced_Received__c))</errorConditionFormula>
        <errorDisplayField>Date_Invoiced_Received__c</errorDisplayField>
        <errorMessage>Please populate the Date  Incurred field for all project-related SHL incurred expenses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Days_Worked_Are_Required</fullName>
        <active>true</active>
        <description>SSE-11327 - To make Days worked mandatory if there is a value in Day Rate field</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Day_Rate__c)),ISBLANK(Days_Worked__c))</errorConditionFormula>
        <errorDisplayField>Days_Worked__c</errorDisplayField>
        <errorMessage>Days worked are required, when a Day rate is defined</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_field_mandatory</fullName>
        <active>true</active>
        <description>Reason field to be mandatory if the &apos;Cost Type&apos; is set up to &apos;Associate Consultant&apos;</description>
        <errorConditionFormula>AND(ISPICKVAL( Associate_Type__c ,&apos;Associate Consultant&apos;), ISPICKVAL(Reason__c, &quot;&quot;) )</errorConditionFormula>
        <errorMessage>Reason field needs to be mandatory as the &apos;Cost Type&apos; is &apos;Associate Consultant&apos;</errorMessage>
    </validationRules>
</CustomObject>